steel thread tested with allergy intolerance